cache sermons, don't make the audio file required (in case it wasn't recorded), fix h1 spacing

--- a/idchurch/theme/diazo_resources/static/main.css
+++ b/idchurch/theme/diazo_resources/static/main.css
@@ -109,6 +109,7 @@ section {
     overflow: hidden;
     background-color: #000000;
     color: #000000;
+    margin-left: 10px;
 }
 #content .documentDescription {
     margin-bottom: 1em;
